release/bases/configure/kube-bind-gateway-letsencrypt.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: anynines-backend-envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: anynines-backend-gateway
  namespace: bind
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  gatewayClassName: anynines-backend-envoy-gateway
  listeners:
  - name: http
    hostname: $KUBE_BIND_BACKEND_HOST
    protocol: HTTP
    port: 80
  - name: https
    hostname: $KUBE_BIND_BACKEND_HOST
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: anynines-backend-tls   # cert-manager will create/update this Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anynines-backend
  namespace: bind
spec:
  hostnames:
  - $KUBE_BIND_BACKEND_HOST
  parentRefs:
  - name: anynines-backend-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: anynines-backend
      port: 443
