release/bases/configure/kube-bind-ingress-letsencrypt.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anynines-backend
  namespace: bind
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - secretName: anynines-backend-tls
      hosts:
       - $KUBE_BIND_BACKEND_HOST
  rules:
    - host: $KUBE_BIND_BACKEND_HOST
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: anynines-backend
                port:
                  number: 443
